--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
 	"repositories": [
 		{
 		  "type": "git",
-			"version": "dev-master",
+			"version": "dev-master-laravel-8",
 		  "url": "git@github.com:ybrmst/webarq-laravel-core.git"
 		}
 	],
@@ -21,7 +21,7 @@
         }
     },
 	"require": {
-		"webarq/core": "dev-master"
+		"webarq/core": "dev-master-laravel-8"
 	},
     "config": {
         "allow-plugins": {
